--- a/dokuwiki_custom.css
+++ b/dokuwiki_custom.css
@@ -1,13 +1,1 @@
-/* scrool sidebar toc */
-.sidebar-absolute {
-    width: 160px;
-    position: absolute;
-}
-
-.sidebar-fixed {
-    top: 10px;
-    width: 160px;
-    position: fixed;
-    overflow-y: auto;
-    height: 90%;
-}
+/var/www/static/css/dokuwiki_custom.css
