--- a/vector/static/3rd/vector/main-rtl.css
+++ b/vector/static/3rd/vector/main-rtl.css
@@ -1003,8 +1003,10 @@ div#content a[href ^="gopher://"] {
 }
 div#content a[href ^="https://"],
 .link-https {
-	/* background: url(static/3rd/vector/lock-icon.png) center left no-repeat; */
+	/* 
+    background: url(static/3rd/vector/lock-icon.png) center left no-repeat;
 	padding: 0 0 0 13px;
+    */
 }
 div#content a[href ^="mailto:"],
 .link-mailto {
